<resources>
    <string name="app_name">Card5Min</string>

    <!--FIREBASE MESSAGING-->
    <string name="msg_subscribed" translatable="false">msg_subscribed</string>
    <string name="msg_subscribe_failed" translatable="false">msg_subscribe_failed</string>

    <!--MENU STRINGS-->
    <string name="title_loans">Займы</string>
    <string name="title_settings">Настройки</string>
    <string name="title_privacy">Политика конфеденциальности</string>

    <!--LIST LOANS-->
    <string name="text_empty_json">Подбираем для Вас наилучшие предложения, зайдите пожалуйста позже</string>
    <string name="apply">Оформить</string>

    <!--ITEM LOAN-->
    <string name="get_money">Получить деньги</string>

    <!--SETTINGS-->
    <string name="sum_payment">Сумма</string>
    <string name="days">Срок(дни)</string>
    <string name="tips_settings">Полезные советы
        <b>Как получить займ под 0%(без переплат)?</b> \n
-Просто оформите займ в организации в которую НЕ
обращались ранее. \n
        \n
        <b>Как получить займ без отказа(с плохой КИ)?</b> \n
-Необходимо оформить займ сразу в нескольких
организациях на мелкие суммы.</string>

    <!--CONTENT DESCRIPTION-->
    <string name="cd_image_fragment_description">image fragment description</string>
    <string name="cd_image_tips_settings">image tips settings</string>
    <string name="cd_image_base_item">image_base_item</string>

</resources>